--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2184,8 +2184,8 @@ label {
 }
 .booking-list-item-inner {
   background: #fff;
-  padding: 30px;
-  border-radius: 5px;
+  padding: 10px;
+  border-radius: 8px;
   box-shadow: 0px 1px 20.58px 0.42px rgba(141, 138, 138, 0.14);
 }
 .booking-list-item {
@@ -2198,6 +2198,7 @@ label {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
+  margin-bottom: -18px;
 }
 .booking-list-item .flight-airway {
   margin-right: 10px;
@@ -2258,15 +2259,16 @@ label {
   font-weight: 600;
 }
 .booking-list-item .flight-price .btn {
-  padding: 11px 50px;
-  border-radius: 3px;
+  padding: 8px 15px;
+  border-radius: 10px;
+  font-size: 15px;
 }
 .booking-list-item .booking-list-bottom ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 10px;
-  padding-top: 20px;
+  margin-top: 2px;
+  padding-top: 5px;
   border-top: 1px dashed #d2d2d2;
 }
 .booking-list-item .booking-list-bottom ul li {
@@ -2274,6 +2276,51 @@ label {
   font-weight: 500;
   color: #2f558f;
 }
+.refund {
+  margin-left: 360px;
+}
+#price {
+  color: #2f558f;
+}
+/* New Css */
+.flightResultItemRow .fromToRouteBox {
+  width: 90px;
+  min-height: 28px;
+  position: relative;
+  text-align: center;
+  color: #8592a6;
+  font-family: "Inter-Medium";
+  font-size: 10px;
+}
+.flightResultItemRow .fromToRouteBox .travelTimeBox {
+  max-width: 100%;
+  margin-bottom: 9px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.flightResultItemRow .fromToRouteBox .travelRouteIconBox {
+  width: 100%;
+  height: 16px;
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  background: url() no-repeat left center;
+}
+.flightResultItemRow .fromToRouteBox .travelStopsBox {
+  width: calc(100% - 20px);
+  height: 5px;
+  display: inline-block;
+}
+.columnBlock {
+  width: 100%;
+  float: left;
+  display: block;
+  /* clear: both; */
+}
+
+/* New CSS End */
 .booking-list-item .booking-list-bottom ul li.detail {
   font-size: 16px;
   color: #316ffe;
