--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,6 @@
-/*
-  Theme Name: Geair - Air Ticket Booking System HTML Template.
-  Support: admin@gmail.com
-  Description: Geair - Air Ticket Booking System HTML Template.
-  Version: 1.0
-*/
-
-/* CSS Index
------------------------------------
-1. Theme default css
-2. Header
-3. Mobile-menu
-4. Slider
-5. Breadcrumb
-6. Booking
-7. Features
-8. About
-9. Flight-Offer
-10. Destination
-11. Fly-Next
-12. Brand
-13. Service
-14. Faq
-15. Booking-List
-16. Blog
-17. Contact
-18. Footer
-19. Preloader
-*/
-
 /* 1. Theme default css */
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Aboreto&display=swap");
 body {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -301,61 +272,6 @@ label {
 .custom-container {
   max-width: 1530px;
 }
-.header-top {
-  background: #232b38;
-  padding: 8px 0;
-}
-.header-top-left a {
-  color: #cecece;
-  font-size: 13px;
-}
-.header-top-left a i {
-  color: #ffa903;
-  font-size: 15px;
-  margin-right: 5px;
-}
-.header-top-left a:hover {
-  color: #ffa903;
-}
-.header-top-right ul {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-}
-.header-top-right ul li {
-  position: relative;
-  margin-right: 15px;
-  padding-right: 15px;
-}
-.header-top-right ul li:last-child {
-  margin-right: 0;
-  padding-right: 0;
-}
-.header-top-right ul li::before {
-  content: "";
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 1px;
-  height: 17px;
-  border: 1px dashed #61666f;
-}
-.header-top-right ul li:last-child::before {
-  display: none;
-}
-.header-top-right ul li a {
-  color: #cecece;
-  font-size: 13px;
-}
-.header-top-right ul li a i {
-  font-size: 10px;
-  margin-right: 10px;
-}
-.header-top-right ul li a:hover {
-  color: #ffa903;
-}
 .transparent-header {
   position: absolute;
   left: 0;
@@ -365,7 +281,7 @@ label {
   height: auto;
 }
 .menu-area {
-  top: 40px;
+  top: 5px;
 }
 .menu-nav {
   display: flex;
@@ -375,6 +291,7 @@ label {
 }
 .logo img {
   max-width: 200px;
+  margin-left: 30px;
 }
 .navbar-wrap {
   display: flex;
@@ -545,6 +462,232 @@ label {
 .menu-area.menu-style-two {
   top: 0;
   background: #1f252e;
+}
+
+/* Slider-Section */
+.bg-slide {
+  top: -40px;
+  /* margin-bottom: -200px; */
+  /* background: url(../img/banner.jpeg); */
+  background-color: #26106d;
+  background-attachment: fixed;
+  min-height: 300px;
+  background-position: center;
+  position: relative;
+  background-size: cover;
+  width: 100%;
+}
+
+.bg-slide .text-slide h1 {
+  font-size: 120px;
+  letter-spacing: 18px;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+}
+
+.bg-slide .text-slide h3 {
+  font-weight: 100;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+}
+.text-slide .button-slide {
+  margin-top: 32px;
+}
+.bg-wave-top {
+  height: 120px;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+  bottom: 0;
+  z-index: 8;
+  /* margin-bottom: 50px; */
+}
+.bg-wave-top .wave {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-size: 1000px 100px;
+}
+.bg-wave-top .wave.wave1 {
+  z-index: 10;
+  opacity: 1;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  bottom: 0;
+  -webkit-animation: animation 30s linear infinite;
+  animation: animation 30s linear infinite;
+}
+.bg-wave-top .wave.wave2 {
+  z-index: 8;
+  opacity: 0.5;
+  -webkit-animation-delay: -5s;
+  animation-delay: -5s;
+  bottom: 10px;
+  -webkit-animation: animation2 15s linear infinite;
+  animation: animation2 15s linear infinite;
+}
+.bg-wave-top .wave.wave3 {
+  z-index: 9;
+  opacity: 0.2;
+  -webkit-animation-delay: -2s;
+  animation-delay: -2s;
+  bottom: 15px;
+  -webkit-animation: animation 30s linear infinite;
+  animation: animation 30s linear infinite;
+}
+.bg-wave-top .wave.wave4 {
+  z-index: 7;
+  opacity: 0.7;
+  -webkit-animation-delay: -5s;
+  animation-delay: -5s;
+  bottom: 20px;
+  -webkit-animation: animation2 5s linear infinite;
+  animation: animation2 5s linear infinite;
+}
+@-webkit-keyframes animation {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
+}
+@keyframes animation {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
+}
+@-webkit-keyframes animation2 {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-position-x: 0px;
+  }
+}
+@keyframes animation2 {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-position-x: 0px;
+  }
+}
+
+/* ============= Tab Search Section ============= */
+
+.base-tab-list .nav-pills {
+  border-bottom: 1px solid #ffffff;
+}
+.base-tab-list .nav-pills a.active {
+  border-radius: 4px 4px 0px 0px;
+  background: #30bb4e;
+  text-transform: uppercase;
+  color: #fff !important;
+}
+.base-tab-list .nav-pills li.nav-item {
+}
+.base-tab-list .nav-pills a {
+  color: #fff;
+  text-transform: uppercase;
+  padding: 10px 24px;
+  transition: all 0.4s;
+  font-size: 14px;
+  border-radius: 4px 4px 0px 0px;
+}
+
+.base-tab-list .nav-pills a:hover {
+  background: #30bb4e;
+}
+.base-tab-list .nav-pills a i {
+  margin-right: 8px;
+}
+.base-find-flight h1,
+.base-find-hotel h1,
+.base-find-tour h1,
+.base-find-car h1 {
+  font-family: "Raleway", sans-serif;
+  margin-top: 32px;
+  margin-bottom: 18px;
+  color: #ffffff;
+}
+.group-btn-flight i {
+  margin-right: 4px;
+  transition: all 0.4s;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  transform: rotate(0deg);
+  line-height: 25px;
+}
+
+.group-btn-flight a.btn.btn-primary {
+  margin: auto;
+  background: #33ca53;
+  border: 2px solid #33ca53;
+  width: 185px;
+  display: block;
+  transition: all 0.4s;
+}
+
+.group-btn-flight a.btn.btn-primary:hover i {
+  transform: rotate(90deg);
+  transition: all 0.4s ease;
+}
+.group-btn-flight a.btn.btn-primary:hover {
+  background: #33ca53;
+  border: 2px solid #33ca53 !important;
+  color: #fff;
+  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
+    0 4px 8px 3px rgba(60, 64, 67, 0.15);
+}
+.group-btn-flight {
+  text-align: center;
+  position: absolute;
+  margin-top: 10px;
+  left: 50%;
+  margin-left: -100px;
+}
+.find-flight-form,
+.find-hotel-form,
+.find-tour-form,
+.find-car-form {
+  background: #fff;
+  padding: 28px 24px;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
+    0 4px 8px 3px rgba(60, 64, 67, 0.15);
+}
+
+.find-flight-form .form-group,
+.find-hotel-form .form-group,
+.find-tour-form .form-group,
+.find-car-form .form-group {
+  position: relative;
+}
+.find-flight-form .form-group i,
+.find-hotel-form .form-group i,
+.find-tour-form .form-group i,
+.find-car-form .form-group i {
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  line-height: 45px;
+  font-size: 14px;
+  right: 0;
+  top: 32px;
+  color: #525252;
+}
+
+.flight-title h1 {
+  color: #fff;
+  font-family: "Aboreto", cursive;
 }
 
 /* 3. Mobile-menu */
@@ -895,7 +1038,7 @@ label {
 
 /* 6. Booking */
 .booking-area {
-  margin-top: -170px;
+  margin-top: -200px;
   position: relative;
 }
 .booking-tag ul {
@@ -916,12 +1059,12 @@ label {
   align-items: center;
 }
 .booking-tag ul li a i {
-  font-size: 18px;
+  font-size: 20px;
   margin-right: 10px;
   line-height: 0;
 }
 .booking-tag ul li a:hover {
-  background: rgb(255 255 255 / 18%);
+  background: #ffa903;
 }
 .booking-wrap .nav-tabs {
   border-bottom: none;
@@ -932,7 +1075,7 @@ label {
 }
 .booking-wrap .nav-tabs .nav-link {
   margin-bottom: 0;
-  background: #622243;
+  background: #26116d;
   border: none;
   color: #ffffff;
   text-transform: uppercase;
@@ -961,53 +1104,38 @@ label {
 }
 .booking-wrap .nav-tabs .nav-item.show .nav-link,
 .booking-wrap .nav-tabs .nav-link.active {
-  color: #6a2e4d;
+  color: #26116d;
   background-color: #fff;
 }
 .booking-area .tab-content-wrap {
   background: #fff;
   padding: 25px;
   border-radius: 0 0 20px 20px;
+  box-shadow: 0 3px 3px 0 rgba(142, 130, 130, 0.13);
 }
+.bd {
+  color: rgb(255, 140, 0);
+}
+
 .content-top ul {
   display: flex;
+  justify-content: center;
   align-items: flex-end;
   flex-wrap: wrap;
 }
-.content-top ul li {
-  font-size: 14px;
+.content-top ul button {
+  font-size: 15px;
   font-weight: 600;
-  color: #6a2e4d;
   position: relative;
-  margin-right: 15px;
-  padding-right: 15px;
-  margin-bottom: 12px;
+  padding-right: 50px;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
+  transition: all 0.3s ease-out 0.2s;
 }
-.content-top ul li::before {
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: 5px;
-  width: 2px;
-  height: 13px;
-  background: #6a2e4d;
-  opacity: 0.5;
-}
-.content-top ul li:last-child {
-  margin-right: 0;
-  padding-right: 0;
-}
-.content-top ul li:last-child::before {
-  display: none;
-}
-.content-top ul li span {
-  display: block;
-  font-size: 12px;
-  color: #8d5f77;
-  font-weight: 500;
-  text-align: right;
-  line-height: 1;
-}
+
 .booking-form {
   /* background: #f8f3e7; */
   border-radius: 4px;
@@ -1026,7 +1154,7 @@ label {
   border: none;
   font-size: 14px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   padding: 20px 20px;
   height: 74px;
   font-family: "Barlow", sans-serif;
@@ -1034,7 +1162,7 @@ label {
 .booking-form .form-grp input::placeholder {
   font-size: 14px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   font-family: "Barlow", sans-serif;
 }
 .booking-form ul {
@@ -1055,19 +1183,19 @@ label {
   align-items: center;
   justify-content: center;
   line-height: 0;
-  color: #622243;
+  color: #316ffe;
   border: 1px solid #eeedeb;
 }
 .booking-form .form-grp .exchange-icon:hover {
-  background: #622243;
+  background: #ec6326;
   color: #fff;
-  border-color: #622243;
+  border-color: #ec6326;
 }
 .booking-form ul li:nth-child(2) .form-grp input {
   padding: 20px 20px 20px 40px;
 }
 .booking-form .form-grp label {
-  color: #8d5f77;
+  color: #316ffe;
   font-size: 12px;
   font-weight: 500;
   display: block;
@@ -1166,7 +1294,7 @@ label {
 .tab-content-wrap .content-bottom {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 20px;
 }
@@ -1198,7 +1326,7 @@ label {
 .booking-style-two .content-top ul li a {
   font-size: 16px;
   font-weight: 600;
-  color: #6a2e4d;
+  color: #26116d;
   display: block;
   position: relative;
   padding-left: 30px;
@@ -1354,7 +1482,7 @@ label {
 }
 .best-price a {
   font-size: 16px;
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 600;
   display: flex;
   align-items: center;
@@ -1379,7 +1507,7 @@ label {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #6a2e4d;
+  background: #26116d;
   opacity: 0;
   transition: 0.3s ease-in-out;
 }
@@ -1397,7 +1525,7 @@ label {
 }
 .overlay-content span,
 .flight-offer-content span {
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
   font-size: 15px;
   display: block;
@@ -1405,7 +1533,7 @@ label {
 }
 .overlay-content p,
 .flight-offer-content p {
-  color: #6a2e4d;
+  color: #26116d;
   font-size: 15px;
   font-weight: 500;
   margin-bottom: 4px;
@@ -1483,7 +1611,7 @@ label {
 
 /* 10. Destination */
 .destination-bg {
-  background-image: url(../img/bg/destination_bg.jpg);
+  background-image: url(../img/bg/CAV.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -1497,7 +1625,7 @@ label {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #571336;
+  background: #316ffe7d;
   opacity: 0.35;
   z-index: -1;
 }
@@ -1550,7 +1678,7 @@ label {
   line-height: 1;
 }
 .destination-content .counter-content > p {
-  color: #6a2e4d;
+  color: #26116d;
   font-size: 14px;
   margin-bottom: 0;
   width: 100%;
@@ -1564,7 +1692,7 @@ label {
 }
 .destination-content .counter-icon i {
   font-size: 54px;
-  color: #6a2e4d;
+  color: #26116d;
   line-height: 0;
 }
 .destination-content .content-bottom {
@@ -1720,10 +1848,142 @@ label {
   margin-bottom: 0;
   font-weight: 600;
 }
+/* awsome tour */
 
+.awesome-tour {
+  padding: 100px 0px;
+  background-color: #fff;
+}
+.card-tour {
+  background: #fff;
+  border-radius: 4px;
+  transition: all 0.4s;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+.card-tour .group-btn-card a.btn.btn-primary {
+  padding: 12px 14px;
+  width: 140px;
+  margin-right: 8px;
+  transition: all 0.4s;
+}
+.card-tour .group-btn-card a.btn.btn-primary:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  background-color: #316ffe;
+  border-color: #316ffe !important;
+  color: #fff;
+}
+.card-tour .group-btn-card a.btn.btn-secondary {
+  padding: 12px 14px;
+  width: 140px;
+  margin-left: 8px;
+  background: none;
+  color: #343a40;
+  border: 2px solid #f3f3f3;
+  transition: all 0.4s;
+}
+.card-tour .group-btn-card a.btn.btn-secondary:hover {
+  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
+    0 4px 8px 3px rgba(60, 64, 67, 0.15);
+  background-color: #316ffe;
+  border-color: #316ffe !important;
+  color: #fff;
+}
+.card-tour:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+.card-tour ul.list-info li {
+  display: table-cell;
+  padding: 0;
+  border-right: 1px solid #e9e9e9;
+}
+.card-tour ul.list-info li a {
+  position: relative;
+  top: 0;
+  right: 0;
+  display: block;
+  padding: 10px 0;
+  transition: all 0.4s;
+  color: #b3b3b3;
+}
+.card-tour ul.list-info li a:hover {
+  background: #316ffe;
+  color: #fff !important;
+  text-decoration: none;
+}
+.card-tour ul.list-info li a i {
+  margin-right: 6px;
+}
+.card-tour ul.list-info {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+  border: 1px solid #e9e9e9;
+  margin: 12px 0px;
+  display: table;
+}
+.content-price {
+  margin-bottom: 18px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.card-tour .card-body {
+  padding-top: 0px;
+}
+.card-tour .card-body h5 {
+  margin: 0px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 14px;
+  text-align: center;
+  font-size: 24px;
+}
+.content-price span.price {
+  font-size: 36px;
+  font-weight: bold;
+  color: #33ca53;
+}
+.content-price span.for-price {
+  float: right;
+  margin-top: 14px;
+  font-weight: 300;
+}
+.content-price span.for-price i {
+  margin-right: 10px;
+}
+.card-tour .images-card-tour {
+  position: relative;
+  overflow: hidden;
+  padding: 12px 12px;
+}
+.group-btn-card {
+  text-align: center;
+  margin-bottom: 12px;
+}
+.card-tour .images-card-tour img {
+  transition: all 0.4s;
+  overflow: visible;
+}
+.group-card-tour-btn a.btn.btn-outline {
+  background: #ffffff;
+  display: inline-block;
+  border: 2px solid #dee2e6;
+  transition: all 0.4s;
+  color: #343a40;
+}
+.group-card-tour-btn a.btn.btn-outline:hover {
+  background: #33ca53;
+  border: 2px solid #33ca53;
+  color: #fff;
+  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
+    0 4px 8px 3px rgba(60, 64, 67, 0.15);
+}
+.group-card-tour-btn {
+  text-align: center;
+  margin-top: 44px;
+}
 /* 12. Brand */
 .brand-bg {
-  background-image: url(../img/bg/brand_bg.jpg);
+  background-image: url(../img/bg/brand-bg.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -1737,7 +1997,7 @@ label {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #622243;
+  background: #241064ed;
   opacity: 0.95;
   z-index: -1;
 }
@@ -2032,7 +2292,7 @@ label {
 .price_slider_amount > span {
   font-size: 14px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   text-transform: capitalize;
   margin-right: 5px;
   font-family: "Barlow", sans-serif;
@@ -2076,7 +2336,7 @@ label {
   align-items: center;
   font-size: 16px;
   font-weight: 600;
-  color: #6a2e4d;
+  color: #26116d;
   padding: 13px 20px;
   position: relative;
 }
@@ -2124,7 +2384,7 @@ label {
   padding: 0px 20px 0 10px;
   font-size: 16px;
   font-weight: 600;
-  color: #6a2e4d;
+  color: #26116d;
   vertical-align: middle;
   background: url("../img/icon/select_down_arrow.png") no-repeat scroll 97.5%
     center;
@@ -2415,7 +2675,7 @@ label {
   font-size: 13px;
   font-weight: 500;
   opacity: 0.76;
-  color: #6a2e4d;
+  color: #26116d;
 }
 .flight-detail-wrap .flight-detail-right .title.title-two {
   margin-bottom: 0;
@@ -2439,9 +2699,10 @@ label {
 /* ============= Tab Search Section ============= */
 
 .tab-search {
-  padding: 30px 0px;
+  padding: 80px 0px;
   background: #316ffe;
-  padding-bottom: 70px;
+  padding-bottom: 200px;
+  margin-top: -45px;
 }
 .base-tab-list .nav-pills {
   border-bottom: 1px solid #ffffff;
@@ -2482,7 +2743,7 @@ label {
 .base-find-tour h1,
 .base-find-car h1 {
   font-family: "Raleway", sans-serif;
-  margin-top: 32px;
+  margin-top: -60px;
   margin-bottom: 18px;
   color: #ffffff;
 }
@@ -2723,7 +2984,7 @@ label {
 }
 .customer-progress-step ul li p {
   margin-bottom: 0;
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
 }
 .customer-progress-step ul li:nth-child(2) span {
@@ -2782,7 +3043,7 @@ label {
   padding: 18px 60px 18px 20px;
   font-size: 16px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   vertical-align: middle;
   background: url("../img/icon/select_down_arrow02.png") no-repeat scroll 97.5%
     center;
@@ -2801,7 +3062,7 @@ label {
 .booking-details-wrap .form-grp .form label {
   font-size: 13px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   opacity: 0.8;
   position: absolute;
   left: 10px;
@@ -2833,14 +3094,14 @@ label {
   border-radius: 5px;
   padding: 18px 20px;
   font-size: 16px;
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
   opacity: 80%;
   font-family: "Barlow", sans-serif;
 }
 .booking-details-wrap .form-grp input::placeholder {
   font-size: 16px;
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
   opacity: 80%;
   font-family: "Barlow", sans-serif;
@@ -2852,7 +3113,7 @@ label {
 .booking-details-wrap .gender-select .title {
   font-size: 18px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   margin-bottom: 20px;
 }
 .booking-details-wrap .gender-select ul {
@@ -2909,7 +3170,7 @@ label {
   margin-right: 9px;
 }
 .booking-details-wrap .checkbox-grp label {
-  color: #6a2e4d;
+  color: #26116d;
   font-size: 16px;
   font-weight: 500;
   user-select: none;
@@ -2967,7 +3228,7 @@ label {
   width: 100%;
   background: transparent;
   font-size: 14px;
-  color: #6a2e4d;
+  color: #26116d;
   opacity: 0.74;
   font-weight: 500;
   border: 1px solid #e1e1e1;
@@ -2981,7 +3242,7 @@ label {
   .discount-form
   input::placeholder {
   font-size: 14px;
-  color: #6a2e4d;
+  color: #26116d;
   opacity: 0.74;
   font-weight: 500;
 }
@@ -3037,7 +3298,7 @@ label {
 .booking-sidebar .price-summary-top ul li {
   font-size: 16px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   font-family: "Barlow", sans-serif;
 }
 .booking-sidebar .price-summary-detail ul {
@@ -3046,7 +3307,7 @@ label {
 .booking-sidebar .price-summary-detail ul li {
   font-size: 16px;
   font-weight: 500;
-  color: #6a2e4d;
+  color: #26116d;
   font-family: "Barlow", sans-serif;
   opacity: 0.88;
   display: flex;
@@ -3793,13 +4054,13 @@ label {
   width: 100%;
   border-radius: 5px;
   padding: 18px 20px;
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
   font-size: 16px;
 }
 .contact-form .form-grp textarea::placeholder,
 .contact-form .form-grp input::placeholder {
-  color: #6a2e4d;
+  color: #26116d;
   font-weight: 500;
   font-size: 16px;
 }
