--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,8 +590,6 @@ label {
   text-transform: uppercase;
   color: #fff !important;
 }
-.base-tab-list .nav-pills li.nav-item {
-}
 .base-tab-list .nav-pills a {
   color: #fff;
   text-transform: uppercase;
@@ -615,43 +613,6 @@ label {
   margin-top: 32px;
   margin-bottom: 18px;
   color: #ffffff;
-}
-.group-btn-flight i {
-  margin-right: 4px;
-  transition: all 0.4s;
-  width: 25px;
-  height: 25px;
-  text-align: center;
-  transform: rotate(0deg);
-  line-height: 25px;
-}
-
-.group-btn-flight a.btn.btn-primary {
-  margin: auto;
-  background: #33ca53;
-  border: 2px solid #33ca53;
-  width: 185px;
-  display: block;
-  transition: all 0.4s;
-}
-
-.group-btn-flight a.btn.btn-primary:hover i {
-  transform: rotate(90deg);
-  transition: all 0.4s ease;
-}
-.group-btn-flight a.btn.btn-primary:hover {
-  background: #33ca53;
-  border: 2px solid #33ca53 !important;
-  color: #fff;
-  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
-    0 4px 8px 3px rgba(60, 64, 67, 0.15);
-}
-.group-btn-flight {
-  text-align: center;
-  position: absolute;
-  margin-top: 10px;
-  left: 50%;
-  margin-left: -100px;
 }
 .find-flight-form,
 .find-hotel-form,
@@ -1429,7 +1390,7 @@ label {
 .about-content ul li {
   display: flex;
   align-items: baseline;
-  color: #571336;
+  color: #26116d;
   font-weight: 500;
   margin-bottom: 10px;
 }
@@ -2044,7 +2005,7 @@ label {
   margin-bottom: 15px;
 }
 .service-content .title {
-  color: #571336;
+  color: #26116d;
   font-size: 24px;
   margin-bottom: 30px;
   font-weight: 600;
@@ -2060,7 +2021,7 @@ label {
   margin-bottom: 0;
 }
 .service-content .service-list ul li i {
-  color: #571336;
+  color: #26116d;
   line-height: 0;
   margin-left: 10px;
 }
@@ -2079,7 +2040,7 @@ label {
   align-items: center;
   justify-content: center;
   background: #fff;
-  color: #571336;
+  color: #26116d;
   font-size: 20px;
   cursor: pointer;
   box-shadow: 0px 1px 16px 0px rgba(139, 139, 139, 0.16);
@@ -2099,7 +2060,7 @@ label {
   margin-bottom: 35px;
 }
 .faq-area .faq-content .accordion-button {
-  color: #571336;
+  color: #26116d;
   font-size: 22px;
   font-weight: 600;
   font-family: "Barlow", sans-serif;
@@ -2233,7 +2194,7 @@ label {
   margin-bottom: 0;
   text-transform: uppercase;
   text-align: center;
-  background: #57112f;
+  background: #26116d;
   padding: 14px 15px;
 }
 .booking-list-area .col-27 {
@@ -2252,7 +2213,7 @@ label {
 }
 .booking-sidebar .widget .widget-title {
   font-size: 18px;
-  color: #571336;
+  color: #26116d;
   margin-bottom: 30px;
   padding-bottom: 15px;
   border-bottom: 1px dashed #d2d2d2;
@@ -2267,7 +2228,7 @@ label {
   margin-left: auto;
 }
 .price_filter .ui-slider-range {
-  background: #57112f none repeat scroll 0 0;
+  background: #ff4501 none repeat scroll 0 0;
   border-radius: 2px;
 }
 .price_filter .ui-slider-handle.ui-state-default.ui-corner-all {
@@ -2278,7 +2239,7 @@ label {
   background: #ebebee;
   border-radius: 50px;
   margin-left: -1px;
-  border: 5px solid #57112f;
+  border: 5px solid #ff4501;
 }
 .price_filter .ui-slider-handle.ui-state-default.ui-corner-all:focus {
   outline: none;
@@ -2304,7 +2265,7 @@ label {
   width: 100px;
   border: none;
   font-size: 14px;
-  color: #571336;
+  color: #26116d;
   font-weight: 600;
   font-family: "Barlow", sans-serif;
 }
@@ -2315,7 +2276,7 @@ label {
   cursor: pointer;
   min-width: 68px;
   padding: 9px 12px;
-  color: #571336;
+  color: #26116d;
   font-size: 13px;
   text-align: center;
   background: #fbf9f2;
@@ -2352,7 +2313,7 @@ label {
 }
 .widget .departure-wrap li a i {
   font-size: 22px;
-  color: #591638;
+  color: #26116d;
   line-height: 0;
   margin-right: 30px;
 }
@@ -2375,7 +2336,7 @@ label {
 }
 .widget .flight-stops label {
   font-size: 27px;
-  color: #5d1b3d;
+  color: #26116d;
   line-height: 0;
   margin-top: 7px;
   margin-right: 20px;
@@ -2422,7 +2383,7 @@ label {
   flex-grow: 1;
   font-size: 16px;
   font-weight: 500;
-  color: #571336;
+  color: #26116d;
   user-select: none;
   font-family: "Barlow", sans-serif;
 }
@@ -2619,7 +2580,7 @@ label {
 .flight-detail-wrap .flight-date ul li {
   font-size: 14px;
   font-weight: 600;
-  color: #571336;
+  color: #26116d;
   margin-bottom: 20px;
 }
 .flight-detail-wrap .flight-date ul li:last-child {
@@ -2634,7 +2595,7 @@ label {
 }
 .flight-detail-wrap .flight-detail-right .title {
   font-size: 16px;
-  color: #571336;
+  color: #26116d;
   margin-bottom: 10px;
   position: relative;
   padding-left: 25px;
@@ -2648,7 +2609,7 @@ label {
   font-family: "Font Awesome 6 Free";
   font-weight: 700;
   font-size: 14px;
-  color: #571336;
+  color: #26116d;
 }
 .flight-detail-wrap .flight-detail-info {
   display: flex;
@@ -2717,8 +2678,6 @@ label {
   text-transform: uppercase;
   color: #fff !important;
 }
-.base-tab-list .nav-pills li.nav-item {
-}
 .base-tab-list .nav-pills a {
   color: #fff;
   text-transform: uppercase;
@@ -2747,43 +2706,7 @@ label {
   margin-bottom: 18px;
   color: #ffffff;
 }
-.group-btn-flight i {
-  margin-right: 4px;
-  transition: all 0.4s;
-  width: 25px;
-  height: 25px;
-  text-align: center;
-  transform: rotate(0deg);
-  line-height: 25px;
-}
 
-.group-btn-flight a.btn.btn-primary {
-  margin: auto;
-  background: #33ca53;
-  border: 2px solid #33ca53;
-  width: 185px;
-  display: block;
-  transition: all 0.4s;
-}
-
-.group-btn-flight a.btn.btn-primary:hover i {
-  transform: rotate(90deg);
-  transition: all 0.4s ease;
-}
-.group-btn-flight a.btn.btn-primary:hover {
-  background: #33ca53;
-  border: 2px solid #33ca53 !important;
-  color: #fff;
-  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
-    0 4px 8px 3px rgba(60, 64, 67, 0.15);
-}
-.group-btn-flight {
-  text-align: center;
-  position: absolute;
-  margin-top: 10px;
-  left: 50%;
-  margin-left: -100px;
-}
 .find-flight-form,
 .find-hotel-form,
 .find-tour-form,
@@ -2793,108 +2716,6 @@ label {
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
     0 4px 8px 3px rgba(60, 64, 67, 0.15);
-}
-
-.tab-home-2 .base-tab-list .nav-pills a.active {
-  border-radius: 4px 4px 4px 4px;
-  background: #33ca53;
-  text-transform: uppercase;
-  color: #fff !important;
-}
-.tab-home-2 .find-flight-form,
-.tab-home-2 .find-hotel-form,
-.tab-home-2 .find-tour-form,
-.tab-home-2 .find-car-form {
-  background: #fff;
-  padding: 28px 24px;
-  height: auto;
-  box-shadow: none;
-  padding-top: 0px;
-}
-.tab-home-3 .find-flight-form,
-.tab-home-3 .find-hotel-form,
-.tab-home-3 .find-tour-form,
-.tab-home-3 .find-car-form {
-  background: none;
-  padding: 28px 24px;
-  height: auto;
-  box-shadow: none;
-  padding-top: 0px;
-}
-.tab-home-3 .base-tab-content {
-  border-radius: 0px 0px 8px 8px;
-  background-color: rgba(255, 255, 255, 0.56);
-}
-
-.tab-home-3 .base-tab-list {
-  background: #f7f7f775;
-  border-radius: 8px 8px 0px 0px;
-}
-
-.tab-home-3 .base-tab-list .nav-pills a {
-  color: #343a40;
-}
-
-.tab-home-3 .base-tab-content h1 {
-  margin: 0;
-  color: #212529;
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-.tab-home-2 .base-find-flight h1,
-.tab-home-2 .base-find-hotel h1,
-.tab-home-2 .base-find-tour h1,
-.tab-home-2 .base-find-car h1 {
-  color: #212529;
-  margin: 0px;
-  padding-top: 24px;
-  padding-bottom: 18px;
-}
-.tab-home-2 .base-find-flight,
-.tab-home-2 .base-find-hotel,
-.tab-home-2 .base-find-tour,
-.tab-home-2 .base-find-car {
-  background: #fff;
-  border-radius: 0px 0px 8px 8px;
-  box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3),
-    0 4px 8px 3px rgba(60, 64, 67, 0.15);
-}
-
-.tab-home-2 .base-tab-list .nav-pills {
-  border-bottom: 1px solid #ffffff;
-  border: none;
-  background: #fafafa;
-  padding: 8px 0px;
-  border-radius: 8px 8px 0px 0px;
-}
-.tab-home-2 .group-btn-flight a.btn.btn-primary {
-  margin: auto;
-  background: #33ca53;
-  border: 2px solid #33ca53;
-  width: 100%;
-  display: block;
-  transition: all 0.4s;
-}
-.tab-home-2 .base-tab-list .nav-pills a {
-  color: #6c757d;
-  text-transform: uppercase;
-  transition: all 0.4s;
-  font-size: 14px;
-  border-radius: 4px 4px 0px 0px;
-  padding: 8px 10px;
-  margin-right: 6px;
-}
-.tab-home-2 .base-tab-list .nav-pills a:hover {
-  color: #ffffff;
-  text-transform: uppercase;
-  transition: all 0.4s;
-  font-size: 14px;
-  border-radius: 4px 4px 4px 4px;
-  padding: 8px 10px;
-}
-
-.tab-home-2 .base-tab-list .nav-pills a i {
-  margin-right: 8px;
 }
 
 .find-flight-form .form-group,
@@ -2937,7 +2758,7 @@ label {
 }
 .customer-details-content .content .title {
   font-size: 26px;
-  color: #571336;
+  color: #26116d;
   margin-bottom: 10px;
   font-weight: 600;
 }
@@ -2979,7 +2800,7 @@ label {
   border: 5px solid #ffa903;
   font-size: 18px;
   font-weight: 700;
-  color: #571336;
+  color: #26116d;
   margin-bottom: 8px;
 }
 .customer-progress-step ul li p {
@@ -3202,7 +3023,7 @@ label {
 .booking-details-area .booking-sidebar .widget .flight-info li p {
   font-size: 14px;
   font-weight: 600;
-  color: #571336;
+  color: #26116d;
   font-family: "Barlow", sans-serif;
   margin-bottom: 0;
   line-height: 1.2;
@@ -3373,8 +3194,8 @@ label {
   bottom: 0;
   width: 100%;
   height: 50%;
-  background: -webkit-linear-gradient(to bottom, transparent, #571336);
-  background: linear-gradient(to bottom, transparent, #571336);
+  background: -webkit-linear-gradient(to bottom, transparent, #26116d);
+  background: linear-gradient(to bottom, transparent, #26116d);
   opacity: 0.3;
   transition: 0.3s linear;
   border-radius: 0 0 10px 10px;
@@ -3472,7 +3293,7 @@ label {
   color: #232b38;
 }
 .blog-item.small-item .blog-content .title a:hover {
-  color: #571336;
+  color: #26116d;
 }
 
 /* inner-blog */
